--- a/skibidi-td-v1-test (2).html
+++ b/skibidi-td-v1-test (2).html
@@ -146,6 +146,9 @@
     .calc-thumb .img { width:100%; height:100%; background-size:cover; background-position:center; }
     .calc-thumb .thumb-remove { position:absolute; left:6px; top:6px; background:rgba(0,0,0,0.6); color:#fff; border-radius:8px; padding:3px 6px; cursor:pointer; font-weight:900; font-size:12px; display:inline-block; }
 
+    .trait-badge { position:absolute; right:6px; bottom:6px; background:rgba(0,0,0,0.6); color:#fff; padding:4px 6px; border-radius:8px; font-weight:900; font-size:10px; text-transform:uppercase; }
+    .qty-badge { position:absolute; left:6px; bottom:6px; background:linear-gradient(90deg,#ff6d68,#ffb86b); color:#000; padding:4px 6px; border-radius:8px; font-weight:900; font-size:11px; }
+
     /* square colored frame behind calc thumb */
     .calc-thumb.rarity-astral::before { content:''; position:absolute; inset:-6px; border-radius:12px; background:var(--g-astral); z-index:-1; opacity:0.95; }
     .calc-thumb.rarity-cosmic::before { content:''; position:absolute; inset:-6px; border-radius:12px; background:var(--g-cosmic); z-index:-1; opacity:0.95; }
@@ -237,6 +240,9 @@
 
   <!-- Calculator -->
   <div id="calculator-root" class="calculator-root" aria-hidden="true" style="display:none">
+    <div style="display:flex; justify-content:center; margin-bottom:10px;">
+      <button id="go-main-btn" class="cat-btn" style="display:none; padding:10px 18px;">Go Main Page</button>
+    </div>
     <div class="calc-row">
       <div class="trade-panel" id="left-panel" aria-label="Your value">
         <div class="trade-title you">YOUR VALUE</div>
@@ -338,6 +344,8 @@
     const pickerSidebar = document.getElementById('picker-sidebar');
     const pickerGrid = document.getElementById('picker-grid');
     const pickerSearch = document.getElementById('picker-search-input');
+
+    const goMainBtn = document.getElementById('go-main-btn');
 
     // quantity modal refs
     const qtyOverlay = document.getElementById('qty-overlay');
@@ -541,6 +549,8 @@
 
     function showQtyModal(unitKey){
       if(!unitKey || !unitDatabase[unitKey]) return;
+      // ensure underlying picker is hidden so only this modal shows
+      hidePicker();
       const u = unitDatabase[unitKey];
       // populate qty and trait options
       qtyInput.value = '1';
@@ -573,7 +583,16 @@
         const traitKey = selected ? selected.value : 'base';
         const side = currentPickerSide || 'left';
         addToSide(side, unitKey, traitKey, qty);
-        hideQtyModal(); hidePicker();
+        // keep calculator visible and hide main list/pagination
+        calculatorRoot.style.display = 'block';
+        listRoot.style.display = 'none';
+        pagination.style.display = 'none';
+        const topButtons = document.querySelector('.top-buttons');
+        const sortRow = document.querySelector('.sort-row');
+        if (topButtons) topButtons.style.display = 'none';
+        if (sortRow) sortRow.style.display = 'none';
+        if (goMainBtn) goMainBtn.style.display = 'inline-block';
+        hideQtyModal();
       };
 
       qtyCloseBtn.onclick = hideQtyModal;
@@ -592,7 +611,13 @@
       const u = unitDatabase[it.key] || {};
       const p = u.unitId ? `url('${imageProvider}${u.unitId}')` : '';
       const rcls = (u.rarity || '').toLowerCase().replace(/\s+/g,'-');
-      return `<div class="calc-thumb rarity-${rcls}" data-id="${it.id}" title="${esc(u.name)}"><div class="img" style="background-image:${p}"></div><div class="thumb-remove" data-id="${it.id}">×</div></div>`;
+      const traitLabel = (it.trait && it.trait !== 'base') ? `<div class="trait-badge">${esc(prettifyTrait(it.trait))}</div>` : '';
+      const qtyLabel = (it.qty && it.qty > 1) ? `<div class="qty-badge">x${it.qty}</div>` : '';
+      return `<div class="calc-thumb rarity-${rcls}" data-id="${it.id}" title="${esc(u.name)}">`+
+             `<div class="img" style="background-image:${p}"></div>`+
+             `<div class="thumb-remove" data-id="${it.id}">×</div>`+
+             `${traitLabel}${qtyLabel}`+
+             `</div>`;
     }
 
     function renderThumbs(){
@@ -682,16 +707,27 @@
         btn.classList.add('active');
         const rval = btn.getAttribute('data-rarity') || 'all';
         if (rval === 'calculator') {
-          // show calculator, hide list & pagination
+          // show calculator, hide list & pagination and hide top controls
           calculatorRoot.style.display = 'block';
           calculatorRoot.setAttribute('aria-hidden', 'false');
           listRoot.style.display = 'none';
           pagination.style.display = 'none';
+          const topButtons = document.querySelector('.top-buttons');
+          const sortRow = document.querySelector('.sort-row');
+          if (topButtons) topButtons.style.display = 'none';
+          if (sortRow) sortRow.style.display = 'none';
+          const goMain = document.getElementById('go-main-btn'); if (goMain) goMain.style.display = 'inline-block';
         } else {
+          // restore main view and show top controls
           calculatorRoot.style.display = 'none';
           calculatorRoot.setAttribute('aria-hidden', 'true');
           listRoot.style.display = '';
           pagination.style.display = 'flex';
+          const topButtons = document.querySelector('.top-buttons');
+          const sortRow = document.querySelector('.sort-row');
+          if (topButtons) topButtons.style.display = '';
+          if (sortRow) sortRow.style.display = '';
+          const goMain = document.getElementById('go-main-btn'); if (goMain) goMain.style.display = 'none';
           currentFilter = rval;
           currentPage = 1;
           renderList();
@@ -730,6 +766,25 @@
     let currentPickerSide = 'left';
     plusLeft.addEventListener('click', ()=> { currentPickerSide = 'left'; createPicker(); showPicker(); });
     plusRight.addEventListener('click', ()=> { currentPickerSide = 'right'; createPicker(); showPicker(); });
+
+    // go main page button behavior (also used to restore controls)
+    if (goMainBtn) {
+      goMainBtn.addEventListener('click', ()=>{
+        // restore main list view
+        calculatorRoot.style.display = 'none';
+        calculatorRoot.setAttribute('aria-hidden', 'true');
+        listRoot.style.display = '';
+        pagination.style.display = 'flex';
+        const topButtons = document.querySelector('.top-buttons');
+        const sortRow = document.querySelector('.sort-row');
+        if (topButtons) topButtons.style.display = '';
+        if (sortRow) sortRow.style.display = '';
+        // mark 'all' as active
+        document.querySelectorAll('.cat-btn').forEach(b => b.classList.remove('active'));
+        const allBtn = document.querySelector('.cat-btn[data-rarity="all"]'); if (allBtn) allBtn.classList.add('active');
+        if (goMainBtn) goMainBtn.style.display = 'none';
+      });
+    }
 
     // phone & modal: ensure scrolling inside picker - we've set CSS max-height and overflow.
 
